unpackaged/main/default/objects/NCM_Content_Request__c/NCM_Content_Request__c.object-meta.xml
<CustomObject>
    <label>NCM Content Request</label>
    <nameField>
        <label>NCM Content Request</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NCM Content Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>