unpackaged/main/default/objects/NCM_Content_Request__c/fields/Content_Category__c.field-meta.xml
<CustomField>
    <fullName>Content_Category__c</fullName>
    <label>Content Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Institute Class</fullName>
            </value>
            <value>
                <fullName>OEM</fullName>
            </value>
            <value>
                <fullName>On-Site</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>