unpackaged/main/default/objects/NCM_Content_Request__c/fields/Content_Request_ID__c.field-meta.xml
<CustomField>
    <fullName>Content_Request_ID__c</fullName>
    <displayFormat>CR-{000000}</displayFormat>
    <label>Content Request ID</label>
    <type>AutoNumber</type>
</CustomField>