unpackaged/main/default/objects/NCM_Content_Request__c/fields/ContentRequestID_18__c.field-meta.xml
<CustomField>
    <fullName>ContentRequestID_18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ContentRequestID (18)</label>
    <type>Text</type>
</CustomField>