unpackaged/main/default/objects/NCM_Content_Request__c/fields/Deliverables_Promised__c.field-meta.xml
<CustomField>
    <fullName>Deliverables_Promised__c</fullName>
    <label>Deliverables Promised</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>