unpackaged/main/default/objects/NCM_Content_Request__c/fields/Engagement__c.field-meta.xml
<CustomField>
    <fullName>Engagement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Engagement</label>
    <referenceTo>Engagement__c</referenceTo>
    <relationshipLabel>NCM Content Requests</relationshipLabel>
    <relationshipName>NCM_Content_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>