unpackaged/main/default/objects/NCM_Content_Request__c/fields/Engagements_Checklist__c.field-meta.xml
<CustomField>
    <fullName>Engagements_Checklist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Engagements Checklist</label>
    <referenceTo>Engagements_Checklist__c</referenceTo>
    <relationshipLabel>NCM Content Requests</relationshipLabel>
    <relationshipName>NCM_Content_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>