unpackaged/main/default/objects/NCM_Content_Request__c/fields/Existing_NCM_Content__c.field-meta.xml
<CustomField>
    <fullName>Existing_NCM_Content__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Enter Existing NCM Content (if applicable)</inlineHelpText>
    <label>Existing NCM Content</label>
    <referenceTo>NCM_Content__c</referenceTo>
    <relationshipLabel>NCM Content Requests</relationshipLabel>
    <relationshipName>NCM_Content_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>