unpackaged/main/default/objects/NCM_Content_Request__c/fields/External_Proof_Required__c.field-meta.xml
<CustomField>
    <fullName>External_Proof_Required__c</fullName>
    <label>External Proof Required?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>