unpackaged/main/default/objects/NCM_Content_Request__c/fields/Instructor__c.field-meta.xml
<CustomField>
    <fullName>Instructor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Instructor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>NCM Associates</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>NCM Content Requests</relationshipLabel>
    <relationshipName>NCM_Content_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>