unpackaged/main/default/objects/NCM_Content_Request__c/fields/LOE__c.field-meta.xml
<CustomField>
    <fullName>LOE__c</fullName>
    <label>LOE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>