unpackaged/main/default/objects/NCM_Content_Request__c/fields/Marketing_Project_Request__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Project_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marketing Project Request</label>
    <referenceTo>Request_Forms__c</referenceTo>
    <relationshipLabel>NCM Content Requests</relationshipLabel>
    <relationshipName>NCM_Content_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>