unpackaged/main/default/objects/NCM_Content_Request__c/fields/Monthly_Content_Work__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Content_Work__c</fullName>
    <label>Monthly Content Work</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>