unpackaged/main/default/objects/NCM_Content_Request__c/fields/Planning_Method__c.field-meta.xml
<CustomField>
    <fullName>Planning_Method__c</fullName>
    <label>Planning Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pace</fullName>
            </value>
            <value>
                <fullName>Revision Worksheet</fullName>
            </value>
            <value>
                <fullName>Discretion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>