unpackaged/main/default/objects/NCM_Content_Request__c/fields/Re_Brand_Required__c.field-meta.xml
<CustomField>
    <fullName>Re_Brand_Required__c</fullName>
    <label>Re-Brand Required?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>