unpackaged/main/default/objects/NCM_Content_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>LOE__c</columns>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Existing_NCM_Content__c</columns>
    <columns>Requester__c</columns>
    <columns>Requested_Due_Date__c</columns>
    <columns>Engagements_Checklist__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Under Review,Open,In Progress,Complete,Re-Opened,Cancelled,On Hold,Ongoing,Approved</value>
    </filters>
    <label>All</label>
</ListView>